code/style.css
* {
    font-family: Work Sans;
    margin: 0;
}

main {
    display: flex;
    flex-direction: column;
    align-items: center;
}
/* Note: align-items: center; is for the header animation to expand
from the center instead of the left side. */
a {
    text-decoration: none;
    color: rgb(221, 116, 116);
}

/* Hidden items */
.breaker {
    display: none;
}
.desktop-view-logo {
    display: none;
}
nav {
    display: none;
}

footer {
    font-size: .6em;
    box-sizing: border-box;
    text-align: center;
    margin: 20px;
}

footer a {
    color: rgb(51, 114, 233);
}

/* Mobile first development */
header {
    display: flex;
    justify-content: center;
    width: 100%;
    margin-bottom: 10px 20px;
}
h1 {
    align-self: center;
}

.logo {
    width: 80px;
    height: 80px;
}

h2 {
    padding-left: 10px;
    border-left: 4px solid rgb(214, 116, 116);
}

h3 {
    padding-left: 10px ;
    border-left: 3px solid rgb(214, 116, 116);
}
p {
    line-height: 1.5;
}
hr {
    border: 1px solid grey;
    margin: 1%;
}
/* main news */
.main-news, .main-news-img, .main-news-content {
    width: 85%;
    margin: auto;
    gap: 10px;
}
.main-news-img {
    display: flex;
    margin-bottom: 20px;
    border-radius: 10px;
}
.main-news-content p {
    padding: 10px;
}

/* other news */
.other-news * {
    display: flex;
    flex-direction: column;
    width: 85%;
    margin: auto;
}
article {
    padding-top: 20px;
}
article a {
    box-sizing: content-box;
    width: 100%;
}

.other-news img {
    box-shadow: 0 2px 2px rgba(136, 130, 130, 0.4);;
    align-self: center;
}
/* polaroid effect */
.other-news-polaroid {
    padding: 10px 0 10px 0;
    margin-bottom: 20px;
    background-color: white;
    box-shadow: 0 2px 2px rgba(136, 130, 130, 0.4); */
}

/* Animation part (Demo)
If there's no forwards, the header will disappear after it has expanded!
tranfrom-origin 0 0 otherwise the header will start to expand from the center.
So I set it at 0 0 so it starts from the left of the x axis */

.logo, .desktop-view-logo {
    animation: expandHeader 2s forwards;
    transform: scaleX(0);
    transform-origin: 0 0;
}
a:hover {
    font-weight: 600;
    background: linear-gradient(90deg, rgb(230, 177, 108), rgb(211, 69, 44));
      -webkit-background-clip: text;
      -webkit-text-fill-color: transparent;
}

@keyframes expandHeader {
    to {
        transform: scaleX(1)
    }
}

/* tablet view */
@media (min-width: 668px) {
    /* hidden items */
    .logo {
        display: none;
    }
    h1 {
        display: none;
    }

    header {
        display: flex;
        flex-direction: column;
        margin: auto;
        padding: 20px;
    }
    /* revealed items */
    .desktop-view-logo {
        display: flex;
        align-self: center;
        width: 250px;
    }
    nav {
        display: flex;
        align-self: center;
        padding: 20px;
    }
    
    ul {
        list-style-type: none;
        display: flex;
    }

    nav a {
        margin-right: 20px;
        text-decoration: none;
        color: black;
        font-weight: 600;   
    }
    .social-icons {
        display: none;
    }
    
    .breaker {
        display: block;
        align-self: center;
        width: 90%;
        margin-top: 2vw;
        border-bottom: 2px solid rgb(214, 116, 116);
    }
/* main news */
    .main-news {
        display: flex;
        gap: 30px;
    }
    .main-news-img {
        width: 50%;
        margin: auto;
    }
/* other news */
    .other-news {
        columns: 2;
    }
    .other-news article {
        -webkit-column-break-inside: avoid;
        page-break-inside: avoid;
        break-inside: avoid;
    }
}
/* Desktop view */
@media (min-width: 1024px) {
    .other-news{
        columns: 4;
        margin-top: 20px;
    }
    .other-news article {
        padding: 0;
    }
    .other-news * {
        width: 95%;
    }
    .main-news-img {
        width: 40%;
    }
    .main-news-content {
        width: 50%;
        align-self: center;
    }
    header {
        display: flex;
        flex-direction: row;
    }
    nav {
        display: flex;
        align-self: center;
    }
    
    ul {
        list-style-type: none;
        display: flex;
    }
    ul li {
        margin: 2vw;
        font-size: 20px;
    }
}

